[gd_scene format=3 uid="uid://dulyh4ydd2vqf"]

[ext_resource type="Script" uid="uid://b0j1xq1rfccbx" path="res://scenes/arcade/shield/shield.gd" id="1_4ldry"]
[ext_resource type="AudioStream" uid="uid://dhmhy2csml72q" path="res://assets/sounds/8-bit Sound Library/Hit_00.wav" id="2_4ldry"]
[ext_resource type="Texture2D" uid="uid://dsccarl3md46n" path="res://assets/shield.png" id="2_4wc22"]
[ext_resource type="AudioStream" uid="uid://b51k07kmg5p46" path="res://assets/sounds/8-bit Sound Library/Climb_Rope_Loop_00.wav" id="3_hg65h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohv3a"]
size = Vector2(54, 5)

[node name="Shield" type="Area2D" unique_id=1500789752]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_4ldry")
pulse_max_amount = 1.5550000000000002

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1231453656]
unique_name_in_owner = true
position = Vector2(0, -9.55)
shape = SubResource("RectangleShape2D_ohv3a")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1517023886]
unique_name_in_owner = true
texture = ExtResource("2_4wc22")

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="." unique_id=1343873377]
unique_name_in_owner = true
stream = ExtResource("2_4ldry")
bus = &"SoundFx"

[node name="ShieldOnPlayer" type="AudioStreamPlayer2D" parent="." unique_id=1435657877]
unique_name_in_owner = true
stream = ExtResource("3_hg65h")
bus = &"SoundFx"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
